<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_dimen_screen_border"
    android:paddingRight="@dimen/activity_dimen_screen_border"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen_large"
        android:text="@string/high_scores"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen_small"
        android:background="@color/colorAccent"
        android:padding="@dimen/activity_dimen_extra_small">

        <TextView
            android:id="@+id/score_1"
            style="@android:style/TextAppearance.Holo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_dimen_small"
            android:text="@string/empty_score" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen_small"
        android:background="@color/colorAccent"
        android:padding="@dimen/activity_dimen_extra_small">

        <TextView
            android:id="@+id/score_2"
            style="@android:style/TextAppearance.Holo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_dimen_small"
            android:text="@string/empty_score" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen_small"
        android:background="@color/colorAccent"
        android:padding="@dimen/activity_dimen_extra_small">

        <TextView
            android:id="@+id/score_3"
            style="@android:style/TextAppearance.Holo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_dimen_small"
            android:text="@string/empty_score" />
    </RelativeLayout>

    <TextView
        android:id="@+id/button_help"
        style="@android:style/TextAppearance.Holo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen_large"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="@dimen/activity_dimen_small"
        android:text="@string/how_to_play"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/button_play"
        style="@android:style/TextAppearance.Holo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen_small"
        android:background="@color/colorDanger"
        android:gravity="center"
        android:padding="@dimen/activity_dimen"
        android:text="@string/play_game"
        android:textStyle="bold" />
</LinearLayout>