<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_dimen_screen_border"
    android:paddingRight="@dimen/activity_dimen_screen_border"
    tools:context=".GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="@dimen/activity_dimen_extra_small">

        <TextView
            android:id="@+id/time_count"
            style="@android:style/TextAppearance.Holo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            android:gravity="center"
            android:padding="@dimen/activity_dimen_large"
            android:text="@string/empty_timer"
            android:textSize="@dimen/activity_text_timer"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_stop_exit"
            style="@android:style/TextAppearance.Holo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_dimen_extra_small"
            android:layout_marginRight="@dimen/activity_dimen_extra_small"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:gravity="center"
            android:padding="@dimen/activity_dimen_small"
            android:text="@string/stop"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/button_pause_restart"
            style="@android:style/TextAppearance.Holo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_dimen_extra_small"
            android:layout_marginStart="@dimen/activity_dimen_extra_small"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:gravity="center"
            android:padding="@dimen/activity_dimen_small"
            android:text="@string/pause"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/final_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen"
        android:gravity="center"
        android:text="@string/score"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_dimen"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/card_01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_dimen_extra_extra_small"
                android:layout_marginLeft="@dimen/activity_dimen_extra_extra_small"
                android:layout_marginRight="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_dimen_extra_extra_small"
                android:layout_marginLeft="@dimen/activity_dimen_extra_extra_small"
                android:layout_marginRight="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_dimen_extra_extra_small"
                android:layout_marginLeft="@dimen/activity_dimen_extra_extra_small"
                android:layout_marginRight="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/card_04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/card_07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/card_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />

            <ImageView
                android:id="@+id/card_12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dimen_extra_extra_small"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/card_empty" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>